grilo: Search page is 0-indexed

Fix possible crash when skipping -PAGE_SIZE items when doing a
search. Spotted by Marco Piazza <mpiazza@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=686003